@@ -3,6 +3,7 @@ changes since wmaker 0.60.0:
 
 - added WMScreenWidth() and WMScreenHeight() functions.
 - fixed some problems when compiling with non gcc compilers.
+- added WMSetTextFieldFont()
 - added WMSetButtonImageDefault() (craig nellist <crn@ozemail.com.au>)
 - added WMBag (array/list)
 - added libWUtil, a library that is a subset of libWINGs. It contains utils
